logic of correct and wrong color

--- a/src/components/SideMenu/styles.scss
+++ b/src/components/SideMenu/styles.scss
@@ -1,93 +1,97 @@
 .containerr {
-    width: 300px;
-    height: 100%;
-    background-color: #E5E9F1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    overflow-y: auto;
+  width: 320px;
+  height: 100%;
+  background-color: #e5e9f1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow-y: auto;
 
-    .title {
-        font-size: 1.4rem;
-        color: #48525D;
-        margin-top: 1rem;
+  .title {
+    font-size: 1.4rem;
+    color: #48525d;
+    margin-top: 1rem;
+  }
+
+  .boxSubTitles {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    text-align: center;
+    margin-top: 1rem;
+    border-top: 1px solid #b9bfc9;
+
+    p {
+      font-size: 0.8rem;
+      font-weight: 600;
+      color: #48525d;
+      border-right: 1px solid #b9bfc9;
+      padding: 0.4rem 1rem;
+      text-transform: uppercase;
     }
 
-    .boxSubTitles {
-        width: 100%;
+    p:nth-child(3) {
+      border-right: none;
+    }
+  }
+
+  .boxInfo {
+    width: 100%;
+    background-color: #dbdfe6;
+
+    .answers {
+      display: flex;
+      justify-content: space-between;
+      gap: 1rem;
+      padding: 1.4rem 2rem;
+      border-bottom: 3px solid #9ea6b0;
+
+      .color {
+        width: 150px;
+        height: 50px;
+        border-radius: 4px;
         display: flex;
         align-items: center;
-        justify-content: space-around;
-        text-align: center;
-        margin-top: 1rem;
-        border-top: 1px solid #b9bfc9;
+        justify-content: center;
 
-        p {
-            font-size: 0.8rem;
-            font-weight: 600;
-            color: #48525D;
-            border-right: 1px solid #b9bfc9;
-            padding: 0.4rem 1rem;
-            text-transform: uppercase;
+        .hexaColor {
+          font-size: 0.8rem;
+          text-transform: uppercase;
         }
+      }
 
-        p:nth-child(3) {
-            border-right: none;
-        }
+      .active {
+        display: none;
+      }
+
+      .seconds {
+        width: 100px;
+        display: flex;
+        align-items: center;
+        justify-content: end;
+        gap: 0.4rem;
+        font-weight: 600;
+        color: #48525d;
+      }
     }
-
-    .boxInfo {
-        width: 100%;
-        background-color: #DBDFE6;
-        
-
-        .answers {
-            display: flex;
-            gap: 2rem;
-            padding: 1.4rem 1rem;
-            border-bottom: 3px solid #9EA6B0;
-
-            .color {
-                width: 150px;
-                height: 50px;
-                border-radius: 4px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-    
-                .hexaColor {
-                    font-size: 0.8rem;
-                    text-transform: uppercase;
-                }
-    
-            }
-    
-            .seconds {
-                width: 100px;
-                display: flex;
-                align-items: center;
-                gap: 0.4rem;
-                font-weight: 600;
-                color: #48525D;
-            }
-        }
-    }
+  }
 }
 
 *::-webkit-scrollbar {
-    width: 10px;
-    width: 10px;
-  }
-  
-  *::-webkit-scrollbar-thumb {
-    border-radius: 20px;
-    background-color: #9FA9B8;
-  }
-  
-  *::-webkit-scrollbar-thumb:hover {
-    background-color: #9FA9B8;
-  }
-  
-  *::-webkit-scrollbar-thumb:active {
-    background-color: #88909b;
-  }
+  width: 10px;
+  width: 10px;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 20px;
+  background-color: #9fa9b8;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #9fa9b8;
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: #88909b;
+}
